fix piano roll overlapping with format indicators in smaller resolutions

--- a/resources/static/style.css
+++ b/resources/static/style.css
@@ -2413,7 +2413,7 @@ input[type="range"]::-moz-range-thumb {
 
 .forte-piano-roll-container {
   position: fixed;
-  bottom: 60%;
+  top: calc(2rem + 50px + 1rem + 6.3rem + 1rem);
   left: 0;
   width: 100%;
   height: 150px;
@@ -2479,7 +2479,7 @@ input[type="range"]::-moz-range-thumb {
 }
 .forte-score-reason {
   position: fixed;
-  bottom: calc(65% + 150px);
+  top: calc(2rem + 50px + 1rem + 6.3rem + 1rem - 50px);
   left: 50%;
   transform: translate(-50%, 20px);
   font-family: "Rajdhani", sans-serif;
